# fastapi-mongodb

./: .env.example  Dockerfile  Makefile  Readme.md  employees.json  fill_database.py  pyproject.toml
api/: __init__.py  app.py
api/handlers/: users.py
api/schemas/: users.py
common/: settings.py
common/containers/: users.py
docker_compose/: app.yaml  storages.yaml
domain/: users.py
repositories/users/: common.py  mongo.py
services/: exceptions.py  users.py  usrers.py
